# Test_project

./: .gitignore  README.md  dump_russian.json  github.txt  requirements.txt
barbershop/: .env.example  .gitignore  .timeweb.yml  README.md  data.json  git_hub.txt  gunicorn.conf.py  init.sh  pyproject.toml  requirements.txt  settings.py  urls.py
barbershop/barbershop/: settings.py  urls.py  wsgi.py
barbershop/barbershop/utils/: __init__.py
barbershop/core/: admin.py  arguments.txt  context_processors.py  forms.py  mixins.py  models.py  urls.py  views.py
barbershop/core/migrations/: 0001_initial.py  0003_order_notification_sent.py  0004_auto_20250529_1728.py  0006_empty_fix_migration.py
barbershop/static/css/: auth.css  booking.css  services.css  thanks.css
barbershop/staticfiles/css/: services.css  variables.css
barbershop/staticfiles/js/: main.js
barbershop/templates/: base.html
barbershop/templates/core/: booking.html  landing.html  master_edit.html  orders_list.html  review_thanks.html  service_create.html
barbershop/templates/includes/: menu.html
barbershop/templates/users/: login.html  logout.html  password_change.html  password_change_done.html  password_change_form.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt  profile.html  profile_detail.html  profile_update_form.html
barbershop/users/: admin.py  apps.py  backends.py  forms.py  models.py  signals.py  urls.py  views.py
core/: apps.py  data.py  (+5 more)
(+22 files in other folders)
